# yuno_rust

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.json
src/: main.rs
src/commands/: fun.rs  mod.rs  moderation.rs  utility.rs
src/config/: mod.rs
src/database/: mod.rs
src/modules/: auto_cleaner.rs  mod.rs  spam_filter.rs  terminal.rs
src/utils/: mod.rs
