[package]
name = "yuno_gasai"
version = "0.1.0"
edition = "2021"
authors = ["blubskye"]
license = "AGPL-3.0-or-later"
description = "Yuno Gasai - A Discord bot with moderation, auto-cleaning, and utility features"
repository = "https://github.com/blubskye/yuno_rust"
readme = "README.md"
keywords = ["discord", "bot", "moderation"]
categories = ["command-line-utilities"]

[dependencies]
# Discord bot framework
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for API calls like anime/manga)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Regex for spam filtering
regex = "1"

# Lazy static for global state
lazy_static = "1"

# Random number generation
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
